pagina inicio acabado

--- a/Pablo_plato.html
+++ b/Pablo_plato.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div class="header">
-        <h1>Guía para Crear Videos con Pictory</h1>
         <nav>
             <a href="./inicio.html">Inicio</a>
             <a href="./Pablo_plato.html">Pablo Plato</a>
@@ -36,7 +35,7 @@
         </table>
     </div>
     <div class="footer">
-        <p class="pfooter">&copy; 2025 Creación de Videos - Empresa: Hao - Miembros: David.V, Joel.B, Joan,G y Hao</p>
+        <p class="pfooter">&copy; 2025 Creación de Videos - Empresa: JJJD - Miembros: David.V, Joel.B, Joan,G y Hao</p>
     </div>
 </body>
 </html>
