--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <nav>
-            <a href="./inicio.html">Inicio</a>
+            <a href="./index.html">Inicio</a>
             <a href="./Pablo_plato.html">Pablo Plato</a>
             <a href="./reparacio.html">Centre de Reparació</a>
         </nav>
