pagina web acabado

--- a/Pablo_plato.html
+++ b/Pablo_plato.html
@@ -34,6 +34,9 @@
             </td></tr>
         </table>
     </div>
+    <div class="containervideo">
+    <video id="vpablo" controls> <source src="./videos/pabloplato.mp4" type="video/mp4"></video>
+    </div>
     <div class="footer">
         <p class="pfooter">&copy; 2025 Creación de Videos - Empresa: JJJD - Miembros: David.V, Joel.B, Joan,G y Hao</p>
     </div>
