--- a/reparacio.html
+++ b/reparacio.html
@@ -14,7 +14,8 @@
             <a href="./reparacio.html">Centre de Reparació</a>
         </nav>
     </div>
-    <div class="container">
+<section class="cols">
+    <div class="col1">
         <h1>Centre de Reparació de Dispositius Electrònics</h1>
         <table>
             <tr><th>Apartado</th><th>Descripción</th></tr>
@@ -32,6 +33,10 @@
             </td></tr>
         </table>
     </div>
+    <div class="col2">
+        <video id="vreparacion" controls> <source src="./videos/reparaciones.mp4" type="video/mp4"></video>
+    </div> 
+</section>
     <div class="footer">
         <p class="pfooter">&copy; 2025 Creación de Videos - Empresa: JJJD - Miembros: David.V, Joel.B, Joan,G y Hao</p>
     </div>
