--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </section>
 
             <section class="col-2">
-                <img src="./img/chatgpt.png" alt="" width="80%">
+                <img src="./img/chatgpt.png" class="img">
             </section>
             
 
@@ -65,7 +65,7 @@
         <h1 id="pictory">Pictory</h1>
         <div class="col">
             <section class="col-1-1">
-                <img src="./img/pictory.png" alt="" width="140%">
+                <img src="./img/pictory.png" class="img2">
             </section>
 
             <section class="col-2-2">
