--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Creación de Videos con Pictory</title>
     <link rel="stylesheet" href="./estilo.css">
+    <link rel="icon" href="./img/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="header">
+        
         <nav>
             <a href="./index.html">Inicio</a>
             <a href="./Pablo_plato.html">Pablo Plato</a>
@@ -16,6 +18,7 @@
     </div>
     
     <div class="container">
+        <img src="./img/logo.png" alt="logo" class="logo">
         <h1>IAs que hemos utilizado</h1>
         <ul>
             <li>
