--- a/reparacio.html
+++ b/reparacio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centre de Reparació de Dispositius Electrònics</title>
     <link rel="stylesheet" href="./estilo.css">
+    <link rel="icon" href="./img/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="header">
